# image-evaluation

./: .gitignore  .gitmodules  Cargo.toml  README.md  bench  hk.pkl  justfile  mise.toml  pyproject.toml  setup_data.sh
.github/workflows/: ci.yml
bench_lib/: build.py  data_setup.py  effort.py  imageprep.py  models.py  plotting.py  report.py  runner.py  scaling.py  summary.py  system_info.py  tunables_doc.py
bench_lib/assets/: report.css  report.js
docs/: tunables.md  zen-integration.md
harness/cpp/: avif_decode_impl.hpp  avif_encode_impl.hpp  benchmark_harness.hpp
harness/rust/src/: lib.rs
implementations/cpp/dav1d/: CMakeLists.txt
implementations/cpp/jpegli/: CMakeLists.txt  decode.cpp  encode.cpp
implementations/cpp/libavif/: CMakeLists.txt
implementations/cpp/libgav1/: CMakeLists.txt
implementations/cpp/libjpeg-turbo/: CMakeLists.txt  encode.cpp
implementations/cpp/libjxl/: CMakeLists.txt  encode.cpp
implementations/cpp/libpng/: CMakeLists.txt  decode.cpp  encode.cpp
implementations/cpp/libwebp/: CMakeLists.txt  encode.cpp
implementations/cpp/mozjpeg/: CMakeLists.txt  encode.cpp
implementations/cpp/null/: CMakeLists.txt
implementations/cpp/rav1d/: CMakeLists.txt
implementations/cpp/spng/: CMakeLists.txt
implementations/cpp/svt-av1/: CMakeLists.txt
implementations/rust/image-jpeg/src/: encode.rs
implementations/rust/image-png/src/: encode.rs
implementations/rust/jpeg-encoder/src/: encode.rs
implementations/rust/jxl-rs/: Cargo.toml
implementations/rust/jxl-rs/src/: decode.rs
implementations/rust/oxipng/: Cargo.toml
implementations/rust/oxipng/src/: encode.rs
implementations/rust/rav1e/src/: encode.rs
implementations/rust/zenavif/: Cargo.toml
implementations/rust/zenavif/src/: decode.rs  encode.rs
implementations/rust/zenjpeg/: Cargo.toml
implementations/rust/zenjpeg/src/: decode.rs  encode.rs
implementations/rust/zenjxl/: Cargo.toml
implementations/rust/zenjxl/src/: decode.rs  encode.rs  encode_lossless.rs
implementations/rust/zenpng/: Cargo.toml
implementations/rust/zenpng/src/: decode.rs  encode.rs
implementations/rust/zenwebp/: Cargo.toml
implementations/rust/zenwebp/src/: decode.rs  encode.rs  encode_lossless.rs
implementations/rust/zune-jpegxl/src/: encode.rs
implementations/rust/zune-png/: Cargo.toml
implementations/rust/zune-png/src/: decode.rs  encode.rs
scripts/: deploy_report.sh  test_plot_generation.py
tools/iqa-cli/: Cargo.toml
tools/iqa-cli/src/: main.rs
