[package]
name = "iqa-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "iqa-cli"
path = "src/main.rs"

[dependencies]
# The metric math comes from iqa-rs (vendored as a submodule); this CLI only
# decodes inputs and serializes results. SSIMULACRA2 + PSNR are enabled by
# iqa-rs's default features.
iqa-rs = { path = "../../vendor/iqa-rs" }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
# Decodes reference/distorted images (PNG/JPEG/PPM) into raw RGB8 buffers, the
# input iqa-rs expects. iqa-rs deliberately does not decode image formats.
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "pnm",
] }
