[package]
name = "bench-zenavif"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bench-zenavif-encode"
path = "src/encode.rs"

[[bin]]
name = "bench-zenavif-decode"
path = "src/decode.rs"

[dependencies]
benchmark-harness = { path = "../../../harness/rust" }
# Pure-Rust AVIF codec (AGPL-3.0). Decode is default; encoding is behind the
# `encode` feature (pulls the pure-Rust zenravif AV1 encoder).
zenavif = { version = "0.1", features = ["encode"] }
# PixelBuffer -> Rgb8 conversion for the decode path.
zenpixels-convert = { version = "0.2", default-features = false, features = ["rgb", "imgref"] }
almost-enough = "0.4"
imgref = "1"
rgb = { version = "0.8", default-features = false, features = ["bytemuck"] }
bytemuck = "1"
anyhow = "1.0"
